--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "./src/app.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon ./src/app.js",
+    "dev": "nodemon src/app.js",
     "test": "cross-env NODE_ENV=test jest"
   },
   "dependencies": {
@@ -14,6 +14,7 @@
     "express": "^4.18.0",
     "jest": "^28.0.2",
     "nodemon": "^2.0.15",
+    "pg": "^8.8.0",
     "sucrase": "^3.21.0",
     "supertest": "^6.2.3"
   }
